namespace pySDyPP.Models
{
    public class Analitica : Prueba
    {
        public Boolean Hba1 { get; set; }
    }
}
