namespace pySDyPP.Models
{
    public class Electrocardiograma : Prueba
    {
    }
}
