namespace pySDyPP.Models
{
    public class ITB : Prueba
    {
    }
}
