namespace pySDyPP.Models
{
    public class Preguntas : Prueba
    {
        public string ActividadFisica { get; set; }
        public string Fumar { get; set; }
        public string Drogas { get; set; }
        public string Alcohol { get; set; }
        public string TomaMedicacionCorectamente { get; set; }
    }
}
