namespace pySDyPP.Models
{
    public abstract class Retinografia : Prueba
    {
        public string Tipo { get; set; }
    }
}
