@startuml

class Paciente{}
class Pruebas{}
class ITB{}
class Analitica{}
class Electrocardiograma{}
class Retinografia{}
class TipoI{}
class TipoII{}
class Constantes{}
class Preguntas{}

Paciente "1" -- "0..*" Pruebas : tiene >
Pruebas <|--  ITB
Pruebas <|-- Analitica
Pruebas <|-- Electrocardiograma
Pruebas <|-- Retinografia
Pruebas <|-- Constantes
Pruebas <|-- Preguntas
Retinografia <|-- TipoI
Retinografia <|-- TipoII

@enduml